<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Window"
    android:id="@+id/window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        
        style="@style/BarContainer"
        android:id="@+id/llTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >
        
        <ImageButton 
            style="@style/TitleBarButton"
            android:id="@+id/ibtnTitleBarLeft"
            android:layout_gravity="left"
            android:contentDescription="@string/ibtnTitleBarLeftContentDes"
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout" />

       <ImageView 
           android:id="@+id/ivLogo"
           android:contentDescription="@string/ivLogoContentDes"
           android:scaleType="centerCrop"
           android:layout_gravity="center"
           android:layout_weight="70"
           android:layout_width="wrap_content"
           android:layout_height="match_parent" 
           android:background="@drawable/ofbiz_logo"
            
           />
       <ImageButton 
            style="@style/TitleBarButton"
            android:id="@+id/ibtnTitleBarRight"
            android:contentDescription="@string/ibtnTitleBarRightContentDes"
            android:layout_gravity="right" 
            android:layout_weight="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add" />
    </LinearLayout>
    
    <LinearLayout
        style="@style/MainPanelContainer"
        android:id="@+id/llMainPanel"
        android:layout_below="@id/llTitleBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <EditText android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mysharp"
            android:paddingLeft="10dp"
            android:hint="@string/searchHint"
            android:visibility="gone"
            />
        <include layout="@layout/list_header_selector"/>
        <ListView
            android:id="@+id/lvMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/listitem_divider"
            android:dividerHeight="1px"
            android:cacheColorHint="#00000000"
            android:smoothScrollbar="true"
             >
        </ListView>
    </LinearLayout>
</RelativeLayout>