<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >
    <LinearLayout
        android:id="@+id/llTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BFB9B3"
        android:orientation="horizontal" >
        <ImageButton 
            android:id="@+id/ibtnTitleBarLeft"
            android:layout_gravity="left"
            android:contentDescription="@string/ibtnTitleBarLeftContentDes"
            android:paddingLeft="19dip"
            android:paddingRight="19dip"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logout" />
       <ImageView 
           android:id="@+id/ivLogo"
           android:contentDescription="@string/ivLogoContentDes"
           android:scaleType="fitXY"
           android:layout_gravity="center"
           android:layout_weight="4"
           android:layout_width="wrap_content"
           android:layout_height="match_parent" 
           android:src="@drawable/logo" />

        <ImageButton 
            android:id="@+id/ibtnTitleBarRight"
            android:contentDescription="@string/ibtnTitleBarRightContentDes"
            android:paddingLeft="19dip"
            android:paddingRight="19dip"
            android:layout_weight="1"
            android:layout_gravity="right" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add" />
    </LinearLayout>
<!--     <ListView -->
<!--         android:id="@+id/lvMain" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="match_parent" -->
<!--         android:layout_below="@id/llTitleBar" -->
<!--         android:layout_marginTop="8dip" -->
<!--         android:padding="10dip" > -->
<!--     </ListView> -->

    <LinearLayout
        android:id="@+id/llTest"
        android:layout_below="@id/llTitleBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dip"
        android:background="#BFB9B3"
        android:orientation="vertical" >
        
        <ListView 
            android:id="@+id/lvTest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:smoothScrollbar="true"
            android:divider="@color/red"
            android:dividerHeight="1dp"
            android:cacheColorHint="#00000000"
            android:background="@android:color/background_light" >
            
        </ListView>
    </LinearLayout>
</RelativeLayout>