<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Window"
    android:id="@+id/window"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            style="@style/BarContainer"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ofbiz_logo" />
        </LinearLayout>

        <!-- Footer Start -->
        <!-- android:layout_alignParentBottom="true"> -->

        <!-- Login part starts -->
        <LinearLayout
            style="@style/MainPanelContainer"
            android:id="@+id/llMainPanelContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header" >

            <Spinner
                android:id="@+id/spinnerSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/CommonTextView"
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvUser" />

            <EditText
                style="@style/CommonEditText"
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your username here..."
                 >
            </EditText>

            <TextView
                style="@style/CommonTextView"
                android:id="@+id/tvPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/tvPwd" />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="........"
                android:inputType="textPassword"  />

            <Button
                style="@style/FormButton"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnLogin" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>